--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6f0157b
+	base = 898908d
 	trimbase = 
 	parent = debian/hydro/find_object_2d
-	previous = 
+	previous = 6f0157b
