--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ee97159
+	base = 20a838d
 	trimbase = 
 	parent = release/hydro/find_object_2d
-	previous = 
+	previous = ee97159
