--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ffdc924
+	base = 3ec411c
 	trimbase = 
 	parent = rpm/hydro/find_object_2d
-	previous = 
+	previous = ffdc924
