--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5e8c677
+	base = a959421
 	trimbase = 
 	parent = release/indigo/find_object_2d
-	previous = 
+	previous = 5e8c677
