--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec4f68e
+	base = aa78140
 	trimbase = 
 	parent = debian/indigo/find_object_2d
-	previous = 
+	previous = ec4f68e
