--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 63263ec
+	base = 944c74d
 	trimbase = 
 	parent = rpm/indigo/find_object_2d
-	previous = 
+	previous = 63263ec
