--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = afa831c
+	base = bc27618
 	trimbase = 
 	parent = release/jade/find_object_2d
-	previous = 
+	previous = afa831c
