--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1f534a9
+	base = c7c332d
 	trimbase = 
 	parent = debian/jade/find_object_2d
-	previous = 
+	previous = 1f534a9
