--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c4b5d27
+	base = 8615936
 	trimbase = 
 	parent = rpm/jade/find_object_2d
-	previous = 
+	previous = c4b5d27
