--- a/tracks.yaml
+++ b/tracks.yaml
@@ -65,3 +65,26 @@ tracks:
     vcs_type: tar
     vcs_uri: https://find-object.googlecode.com/svn/files/ros/find_object_2d-0.5.1.tar.gz
     version: 0.5.1
+  kinetic:
+    actions:
+    - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
+      :{vcs_uri} --name :{name} --output-dir :{archive_dir_path}
+    - git-bloom-import-upstream :{archive_path} :{patches} --release-version :{version}
+      --replace
+    - git-bloom-generate -y rosrelease :{ros_distro} --source upstream -i :{release_inc}
+    - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
+      -i :{release_inc} --os-name ubuntu
+    - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
+      -i :{release_inc} --os-name debian --os-not-required
+    - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
+      :{release_inc}
+    devel_branch: kinetic-devel
+    name: upstream
+    patches: null
+    release_inc: -1
+    release_repo_url: null
+    release_tag: :{version}-kinetic
+    ros_distro: kinetic
+    vcs_type: git
+    vcs_uri: https://github.com/introlab/find-object.git
+    version: :{auto}
