--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cb30375
+	base = 02bcb68
 	trimbase = 
 	parent = debian/kinetic/find_object_2d
-	previous = 
+	previous = cb30375
