--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 89dedaa
+	base = 94a7589
 	trimbase = 
 	parent = debian/kinetic/find_object_2d
-	previous = 
+	previous = 89dedaa
