--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c1693d0
+	base = 7c752cb
 	trimbase = 
 	parent = release/kinetic/find_object_2d
-	previous = 
+	previous = c1693d0
