--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f55529
+	base = e25c2d0
 	trimbase = 
 	parent = rpm/kinetic/find_object_2d
-	previous = 
+	previous = 2f55529
