--- a/package.xml
+++ b/package.xml
@@ -11,7 +11,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>genmsg</buildtool_depend>
-  
+ 
+  <build_depend>qt_gui_core</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
@@ -22,6 +23,7 @@
   <build_depend>message_filters</build_depend>
   <build_depend>tf</build_depend>
   
+  <run_depend>qt_gui_core</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
