Imported upstream version '0.6.1' of 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 2.8.5)
 
 # Detect if it is called by catkin
-SET(CATKIN_BUILD ${CATKIN_TOPLEVEL})
+IF(CATKIN_TOPLEVEL OR CATKIN_BUILD_BINARY_PACKAGE)
+  SET(CATKIN_BUILD TRUE)
+ENDIF(CATKIN_TOPLEVEL OR CATKIN_BUILD_BINARY_PACKAGE)
+
+MESSAGE(STATUS "CATKIN_BUILD=${CATKIN_BUILD}")
 
 IF(NOT CATKIN_BUILD)
    #Standalone build
