Imported upstream version '0.6.2' of 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.5)
 
 # Detect if it is called by catkin
-IF(CATKIN_TOPLEVEL OR CATKIN_BUILD_BINARY_PACKAGE)
+IF(CATKIN_TOPLEVEL OR CATKIN_BUILD_BINARY_PACKAGE OR CATKIN_SKIP_TESTING OR CATKIN_ENABLE_TESTING OR CATKIN_DEVEL_PREFIX)
   SET(CATKIN_BUILD TRUE)
-ENDIF(CATKIN_TOPLEVEL OR CATKIN_BUILD_BINARY_PACKAGE)
+ENDIF(CATKIN_TOPLEVEL OR CATKIN_BUILD_BINARY_PACKAGE OR CATKIN_SKIP_TESTING OR CATKIN_ENABLE_TESTING OR CATKIN_DEVEL_PREFIX)
 
 MESSAGE(STATUS "CATKIN_BUILD=${CATKIN_BUILD}")
 
@@ -26,7 +26,7 @@ INCLUDE(GNUInstallDirs)
 #######################
 # VERSION
 #######################
-SET(PROJECT_VERSION "0.6.1")
+SET(PROJECT_VERSION "0.6.2")
 SET(PROJECT_PREFIX find_object)
 
 STRING(REGEX MATCHALL "[0-9]" PROJECT_VERSION_PARTS "${PROJECT_VERSION}")
