--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = abc97a9
+	base = 8f36857
 	trimbase = 
 	parent = debian/lunar/find_object_2d
-	previous = 
+	previous = abc97a9
