--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c7d12f4
+	base = a5c5326
 	trimbase = 
 	parent = debian/lunar/find_object_2d
-	previous = 
+	previous = c7d12f4
