--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = afb45a7
+	base = 9f3c38b
 	trimbase = 
 	parent = release/lunar/find_object_2d
-	previous = 
+	previous = afb45a7
