--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 937b417
+	base = bbc9756
 	trimbase = 
 	parent = rpm/lunar/find_object_2d
-	previous = 
+	previous = 937b417
