--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7991310
+	base = 5428c85
 	trimbase = 
 	parent = debian/melodic/find_object_2d
-	previous = 
+	previous = 7991310
