--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b82ac0e
+	base = 77340a3
 	trimbase = 
 	parent = debian/melodic/find_object_2d
-	previous = 
+	previous = b82ac0e
