--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c799e0c
+	base = 417dfa0
 	trimbase = 
 	parent = release/melodic/find_object_2d
-	previous = 
+	previous = c799e0c
