--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8bbb182
+	base = 80aad69
 	trimbase = 
 	parent = rpm/melodic/find_object_2d
-	previous = 
+	previous = 8bbb182
