--- a/tracks.yaml
+++ b/tracks.yaml
@@ -127,9 +127,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: melodic-devel
+    last_version: 0.6.2
     name: upstream
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: null
     release_tag: :{version}-melodic
     ros_distro: melodic
