--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.2-0": ["Fri May 18 2018", "Mathieu Labbe", "matlabbe@gmail.com"]}
+{"0.6.2-0": ["Fri May 18 2018", "Mathieu Labbe", "matlabbe@gmail.com"], "0.6.2-1": ["Tue May 22 2018", "Mathieu Labbe", "matlabbe@gmail.com"]}
