--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/find_object_2d
-	previous = 
-	base = 361be76
+	previous = 361be76
+	base = b8bfd36
 	trim = 
 	trimbase = 
