--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/find_object_2d
-	previous = 
-	base = 7fbae34
+	previous = 7fbae34
+	base = cf2b9ba
 	trim = 
 	trimbase = 
