--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/find_object_2d
-	previous = 
-	base = 7273124
+	previous = 7273124
+	base = 45d9c50
 	trim = 
 	trimbase = 
