--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/find_object_2d
-	previous = 
-	base = 36cb128
+	previous = 36cb128
+	base = 4488416
 	trim = 
 	trimbase = 
