--- a/tracks.yaml
+++ b/tracks.yaml
@@ -151,9 +151,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: noetic-devel
+    last_release: 0.6.3-noetic
+    last_version: 0.6.3
     name: upstream
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: null
     release_tag: :{version}-noetic
     ros_distro: noetic
