--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.3-2": ["Tue May 26 2020", "Mathieu Labbe", "matlabbe@gmail.com"], "0.6.3-1": ["Tue May 26 2020", "Mathieu Labbe", "matlabbe@gmail.com"]}
+{"0.6.3-3": ["Tue May 26 2020", "Mathieu Labbe", "matlabbe@gmail.com"], "0.6.3-2": ["Tue May 26 2020", "Mathieu Labbe", "matlabbe@gmail.com"], "0.6.3-1": ["Tue May 26 2020", "Mathieu Labbe", "matlabbe@gmail.com"]}
