Updating release inc to: 1

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -129,7 +129,8 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: melodic-devel
-    last_version: 0.6.2
+    last_release: 0.6.4-melodic
+    last_version: 0.6.4
     name: upstream
     patches: null
     release_inc: '1'
