--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/find_object_2d
-	previous = 
-	base = 56cc556
+	previous = 56cc556
+	base = 3b73580
 	trim = 
 	trimbase = 
