--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/find_object_2d
-	previous = 
-	base = 01439a2
+	previous = 01439a2
+	base = b983d87
 	trim = 
 	trimbase = 
