--- a/tracks.yaml
+++ b/tracks.yaml
@@ -15,9 +15,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: foxy-devel
+    last_release: 0.7.0-foxy
+    last_version: 0.7.0
     name: find_object_2d
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: null
     release_tag: :{version}-foxy
     ros_distro: foxy
