--- a/package.xml
+++ b/package.xml
@@ -47,6 +47,7 @@
   <exec_depend>message_filters</exec_depend>
   
   <export>
+    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
 	<build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
   </export>
 </package>
