--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/find_object_2d
-	previous = 
-	base = 8b362c3
+	previous = 8b362c3
+	base = 552d825
 	trim = 
 	trimbase = 
