--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/find_object_2d
-	previous = 
-	base = 1b36412
+	previous = 1b36412
+	base = a5334a1
 	trim = 
 	trimbase = 
