--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/find_object_2d
-	previous = 
-	base = a1dd640
+	previous = a1dd640
+	base = 4203570
 	trim = 
 	trimbase = 
