--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/find_object_2d
-	previous = 
-	base = 29f62aa
+	previous = 29f62aa
+	base = 712e4e6
 	trim = 
 	trimbase = 
