--- a/tracks.yaml
+++ b/tracks.yaml
@@ -42,9 +42,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: humble-devel
+    last_release: 0.7.0-humble
+    last_version: 0.7.0
     name: find_object_2d
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: null
     release_tag: :{version}-humble
     ros_distro: humble
