--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/find_object_2d
-	previous = 
-	base = c96f576
+	previous = c96f576
+	base = d7a4e89
 	trim = 
 	trimbase = 
