--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/find_object_2d
-	previous = 
-	base = f967133
+	previous = f967133
+	base = 6305b4e
 	trim = 
 	trimbase = 
