--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/find_object_2d
-	previous = 
-	base = 2839d0a
+	previous = 2839d0a
+	base = f428dd7
 	trim = 
 	trimbase = 
