--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/find_object_2d
-	previous = 
-	base = 983bd81
+	previous = 983bd81
+	base = 6cfb0d2
 	trim = 
 	trimbase = 
