--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.7.0-1": ["Wed Dec 14 2022", "Mathieu Labbe", "matlabbe@gmail.com"]}
+{"0.7.0-2": ["Wed Dec 14 2022", "Mathieu Labbe", "matlabbe@gmail.com"], "0.7.0-1": ["Wed Dec 14 2022", "Mathieu Labbe", "matlabbe@gmail.com"]}
